--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,6 +15,10 @@
   box-sizing: border-box;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   min-width: 320px;
   min-height: 100vh;
@@ -60,7 +64,7 @@ h2.title-sm {
 .title-sub::after {
   content: "";
   position: absolute;
-  left: -10px;
+  left: -16px;
   top: 0;
   width: 1px;
   height: 24px;
